:recycle: Refactor: 개인 일정 기록 전체 조회 Response Builder 리팩토링 <body> - image id, url 빌더 적용
<footer>
- 관련 : #184